fix the overflow problem in survival result + the error whith subgroups

--- a/src/app/modules/gb-survival-results-module/gb-survival-results.component.css
+++ b/src/app/modules/gb-survival-results-module/gb-survival-results.component.css
@@ -90,11 +90,12 @@ p-scrollpanel p.indented{
 #milestonedContainer{
   overflow-x:auto;
   width: 90%;
-  margin-left: 2em;
+  margin-left: 4em;
+  margin-bottom: 4em;
 }
 
 #milestoned{
-  margin-left: 2em;
+  margin-bottom: 0.5em;
   font-size: small;
 }
 
